[project]
name = "github-actions-poetry"
version = "1.0.0"
description = "GitHub re-usable actions & workflows for poetry"
authors = [
    {name = "JCystems",email = "some.email@somewhere.com"}
]
license = {text = "SEE LICENSE IN LICENSE.md"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
]


[virtualenvs]
create = true
in-project = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
